<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_previous"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/previous"/>
    <item
        android:id="@+id/menu_next"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        android:title="@string/next"/>
    <item
        android:id="@+id/menu_create"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        android:title="@string/create_veggiebook"/>

    <item
        android:id="@+id/menu_keep"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/create_veggiebook"/>

    <item
        android:id="@+id/menu_drop"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        android:title="@string/create_veggiebook"/>


</menu>