<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/white">




    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/container_dropshadow"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="25sp"
        android:orientation="vertical">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0sp"
            android:layout_weight="6"
            android:baselineAligned="false"
            android:layout_margin="20sp">

            <view
                class="com.veggiebook.android.view.SquareRelativeLayout"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_alignParentEnd="true"
                android:layout_weight="8">


                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/imageView"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:baselineAlignBottom="true"
                    android:layout_alignParentBottom="false"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button"
                    android:layout_centerVertical="false"
                    android:text="@string/choose_cover_image"
                    android:background="@drawable/btn_default_holo_light"
                    android:layout_centerHorizontal="true"
                    />



            </view>

        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_veggiebook"
            android:id="@+id/button1"
            android:layout_margin="10sp"
            android:textSize="24sp"
            android:textStyle="normal"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/gridViewContainer"
        android:background="#ffffff"
        >


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_cover"
            android:id="@+id/textView3"
            android:background="#ffffff"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:paddingBottom="10sp"
            android:paddingTop="10sp"
            android:textIsSelectable="true"
            android:textSize="18sp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cameraButton"
            android:background="@drawable/btn_default_holo_light"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/camera_button"
            android:textColor="#FFFFFF"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/galleryButton"
            android:background="@drawable/btn_default_holo_light"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/gallery_button"
            android:textColor="#FFFFFF"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_ours"
            android:id="@+id/textView4"
            android:layout_gravity="center_vertical"
            android:background="#69a635"
            android:textSize="18sp"
            android:layout_marginLeft="12sp"
            android:layout_marginRight="12sp"
            android:layout_marginTop="8sp"
            android:textIsSelectable="true"
            android:padding="10sp"
            android:gravity="center_horizontal"
            android:textColor="#FFFFFF"/>

        <GridView
            android:layout_width="wrap_content"
            android:layout_height="0sp"
            android:id="@+id/gridView"
            android:layout_gravity="center_horizontal|top"
            android:background="#69a635"
            android:visibility="visible"
            android:numColumns="2"
            android:layout_weight="6"
            android:padding="10sp"
            android:layout_marginLeft="12sp"
            android:layout_marginRight="12sp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="25sp"/>

    </LinearLayout>

</FrameLayout>