<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#00000000"
    android:id="@+id/linearLayout"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/container_dropshadow"
        android:id="@+id/linearLayout2"
        android:orientation="vertical"
        android:layout_margin="20sp"
        >



    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/closebutton"
        android:layout_gravity="right|center_vertical"
        android:baselineAlignBottom="false"
        android:focusableInTouchMode="true"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:background="#00000000"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="0sp"
        android:contentDescription="@string/Close"/>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/print_at"
        android:id="@+id/textView"
        android:layout_gravity="top"
        android:textColor="@color/overlay_text_primary"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="24sp"
        android:layout_marginRight="24sp"
        android:layout_marginBottom="5sp"
        android:textStyle="bold"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="30sp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/button_no_print"
                android:background="#445344"
                android:textColor="#ffffff"
                android:layout_weight=".3"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/progressBar"
                android:indeterminate="true"/>

            <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/print"
            android:id="@+id/button_print"
            android:background="#445344"
            android:textColor="#ffffff"
            android:layout_weight=".3"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>